Issue fixing
* home screen images cropped
* navigator buttons full trigger-area
* reportList team names truncated
* timePiece props named better
* timer progress cleared on home screen
* blank inducement value string hidden

--- a/matchreporter/src/css/App.css
+++ b/matchreporter/src/css/App.css
@@ -7,6 +7,7 @@
   border: 0px;
   /*width: 320px;*/
   background-color: rgb(0, 0, 0);
+  overflow: hidden;
 }
 div.navigatorContainer {
   height: 40px;
@@ -21,13 +22,13 @@ div.navigator {
   flex-direction: row;
   justify-content: space-evenly;
 }
-div.navigatorHomebutton {
+.navigatorHomebutton {
   background: #242424;
   display: flex;
   flex-direction: row;
   justify-content: center;
   height: 32px;
-  width: "100%";
+  width: 100%;
 }
 .version {
   font-family: 'Teko', sans-serif;
@@ -37,12 +38,13 @@ div.navigatorHomebutton {
 }
 
 .buttonStyles {
-  flex-grow: 1;
+  flex: 1;
   background: #242424;
-  align-content: center;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
+}
+.img_centered{
+  display: block;
+  margin-left: auto;
+  margin-right: auto 
 }
 .buttonChosenStyles {
   background: #DCDAD6;
@@ -54,7 +56,14 @@ decolines width 1016px, offset 80px
   position: absolute;
   z-index: 0;
   top: 24px;
-  left: calc(50% - (1016px)/2 + 80px);
+  width: 100%;
+  overflow:hidden;
+  margin:0;
+}
+.linesImage {
+  margin-left: calc(50% - (1016px)/2 + 80px);
+  object-fit: none;
+  display:block; /*remove inline-block spaces*/
 }
 /*
 newReport_button width 205px, offset 16px
@@ -63,8 +72,9 @@ div.newRepcontainer {
   position: absolute;
   z-index: 2;
   top: 126px;
+  overflow:hidden;
   left: calc(50% + 16px);
-
+  width: calc(100% - (50% + 16px))
 }
 button.newReport_button {
   background: rgba(0, 0, 0, 0);
