--- a/matchreporter/src/css/Prematch.css
+++ b/matchreporter/src/css/Prematch.css
@@ -89,6 +89,8 @@
     color: #242424;
 }
 .inducementsValueBlank {
+    padding-top: 41px;
+    margin-left: 126px;
     width: 64px;
 }
 .inducementsValue1 {
